add getBranchIDByEmployeeID, update field for pet struct
