# gateway/docs/swagger.json
@@ -2339,7 +2339,7 @@
         },
         "/pets": {
             "put": {
-                "description": "Updates a pet record with details like name, species, age, owner ID, etc.",
+                "description": "Updates a pet record with details like name, species, dob, owner ID, etc.",
                 "consumes": [
                     "application/json"
                 ],
@@ -2359,22 +2359,22 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "age": {
-                                    "type": "integer"
-                                },
                                 "color": {
                                     "type": "string"
                                 },
+                                "dob": {
+                                    "type": "string"
+                                },
                                 "id": {
+                                    "type": "string"
+                                },
+                                "identity_mark": {
                                     "type": "string"
                                 },
                                 "name": {
                                     "type": "string"
                                 },
                                 "owner_id": {
-                                    "type": "string"
-                                },
-                                "size": {
                                     "type": "string"
                                 },
                                 "species": {
@@ -2393,22 +2393,22 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "age": {
-                                    "type": "integer"
-                                },
                                 "color": {
                                     "type": "string"
                                 },
+                                "dob": {
+                                    "type": "string"
+                                },
                                 "id": {
+                                    "type": "string"
+                                },
+                                "identity_mark": {
                                     "type": "string"
                                 },
                                 "name": {
                                     "type": "string"
                                 },
                                 "owner_id": {
-                                    "type": "string"
-                                },
-                                "size": {
                                     "type": "string"
                                 },
                                 "species": {
@@ -2445,7 +2445,7 @@
                 }
             },
             "post": {
-                "description": "Creates a new pet record with details like name, species, age, owner ID, etc.",
+                "description": "Creates a new pet record with details like name, species, dob, owner ID, etc.",
                 "consumes": [
                     "application/json"
                 ],
@@ -2465,19 +2465,19 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "age": {
-                                    "type": "integer"
-                                },
                                 "color": {
+                                    "type": "string"
+                                },
+                                "dob": {
+                                    "type": "string"
+                                },
+                                "identity_mark": {
                                     "type": "string"
                                 },
                                 "name": {
                                     "type": "string"
                                 },
                                 "owner_id": {
-                                    "type": "string"
-                                },
-                                "size": {
                                     "type": "string"
                                 },
                                 "species": {
@@ -2554,22 +2554,22 @@
                             "items": {
                                 "type": "object",
                                 "properties": {
-                                    "age": {
-                                        "type": "integer"
-                                    },
                                     "color": {
                                         "type": "string"
                                     },
+                                    "dob": {
+                                        "type": "string"
+                                    },
                                     "id": {
+                                        "type": "string"
+                                    },
+                                    "identity_mark": {
                                         "type": "string"
                                     },
                                     "name": {
                                         "type": "string"
                                     },
                                     "owner_id": {
-                                        "type": "string"
-                                    },
-                                    "size": {
                                         "type": "string"
                                     },
                                     "species": {
@@ -2632,22 +2632,22 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "age": {
-                                    "type": "integer"
-                                },
                                 "color": {
                                     "type": "string"
                                 },
+                                "dob": {
+                                    "type": "string"
+                                },
                                 "id": {
+                                    "type": "string"
+                                },
+                                "identity_mark": {
                                     "type": "string"
                                 },
                                 "name": {
                                     "type": "string"
                                 },
                                 "owner_id": {
-                                    "type": "string"
-                                },
-                                "size": {
                                     "type": "string"
                                 },
                                 "species": {
@@ -4706,6 +4706,9 @@
                                 "address": {
                                     "type": "string"
                                 },
+                                "branchId": {
+                                    "type": "integer"
+                                },
                                 "email": {
                                     "type": "string"
                                 },
@@ -5349,6 +5352,10 @@
                 "address": {
                     "type": "string",
                     "example": "123 Main St, City"
+                },
+                "branchId": {
+                    "type": "integer",
+                    "example": 301
                 },
                 "email": {
                     "type": "string",
